[feature] - fixing the weights, working with pixes between 0 and 1 only, generate the confusion matrix on tests

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 #output files
 naive_bayes/probabilities/*
 single_layer_perceptron/train/*
+single_layer_perceptron/out/*
 
 #test files
 naive_bayes/test/*
